--- a/_config.yml
+++ b/_config.yml
@@ -57,8 +57,8 @@ plugins:
 
 author:
   name   : "Mike Wong"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  avatar : "/assets/images/avater.png"
+  bio    : "Where text meets string."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
